--- a/port2.html
+++ b/port2.html
@@ -39,7 +39,7 @@
         </a>
         </div>
         <div class="nav-menu-btn">
-            <i class="uil uil-bars" onclick="myMenuFunction()"></i>
+            <i class="uil uil-bars" style="color:red" onclick="myMenuFunction()"></i>
         </div>
       </nav>
     <!-- -------------- MAIN ---------------- -->
